@@ -1,6 +1,9 @@
 pre-0.20.1:
 - few minor speed ups
 - RampGenerator uses now the delayed start feature of the queue
+- StepperDemo extended:
+	- avr only: command 'r' toggles erroneous digitalRead() to stepperpin
+	- command 'e' toggles interrupt block of ~100us
 
 0.20.0:
 - rename setSpeed to setSpeedInUs
